# extremetuxracer

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  NEWS  README  astyle.ini  audio.cpp  audio.h  autogen.sh  bh.h  common.cpp  common.h  config_screen.cpp  config_screen.h  configure.ac  course.cpp  course.h  course_render.cpp  course_render.h  credits.cpp  credits.h  env.cpp  env.h  etr  etr_types.h  event.cpp  event.h  event_select.cpp  event_select.h  font.cpp  font.h  ft_font.cpp  ft_font.h  game_config.cpp  game_config.h  game_ctrl.cpp  game_ctrl.h  game_over.cpp  (+70 more)
data/courses/: Makefile.am  courses.lst  events.lst  groups.lst
data/courses/bumpy_ride/: Makefile.am  course.dim  items.lst
data/courses/bunny_hill/: Makefile.am  course.dim  items.lst
data/courses/challenge_one/: Makefile.am  course.dim  items.lst
data/courses/chinese_wall/: Makefile.am  course.dim  items.lst
data/courses/chragis_gagiwaetter/: Makefile.am  course.dim
data/courses/course/: Makefile.am  course.dim  elev.rgb  items.lst  terrain.rgb  trees.rgb
data/courses/default/: Makefile.am  courses.lst
data/courses/default/bumpy_ride/: Makefile.am  course.dim  items.lst
data/courses/default/bunny_hill/: Makefile.am  course.dim
data/courses/default/challenge_one/: Makefile.am  course.dim
data/courses/default/chinese_wall/: Makefile.am  course.dim  course.tcl  items.lst
data/courses/default/chragis_gagiwaetter/: Makefile.am  course.dim
data/courses/default/course/: Makefile.am
data/courses/default/downhill_fear/: Makefile.am  course.dim
data/courses/default/explore_mountains/: Makefile.am  course.dim
data/courses/default/frozen_lakes/: Makefile.am  course.dim  items.lst
data/courses/default/frozen_river/: Makefile.am  course.dim  items.lst
data/courses/default/hippo_run/: Makefile.am  course.dim
data/courses/default/holygrail/: Makefile.am  course.dim  items.lst
data/courses/default/in_search_of_vodka/: Makefile.am  course.dim  items.lst
data/courses/default/keep_country_tidy/: Makefile.am  course.dim
data/courses/downhill_fear/: Makefile.am  course.dim  items.lst
data/courses/explore_mountains/: Makefile.am  course.dim  items.lst
data/courses/extras/: Makefile.am  courses.lst
data/courses/frozen_lakes/: Makefile.am  course.dim  items.lst
data/courses/frozen_river/: Makefile.am  course.dim  items.lst
data/courses/hippo_run/: Makefile.am  course.dim  items.lst
data/courses/holygrail/: Makefile.am  course.dim  items.lst
data/courses/in_search_of_vodka/: Makefile.am  course.dim  items.lst
data/courses/keep_country_tidy/: Makefile.am  course.dim
data/courses/milos_castle/: Makefile.am  course.dim  items.lst
data/courses/path_of_daggers/: Makefile.am  course.dim  items.lst
data/courses/penguins_cant_fly/: Makefile.am  course.dim  items.lst
data/courses/quiet_river/: Makefile.am  course.dim  items.lst
data/courses/secret_valleys/: Makefile.am  course.dim  items.lst
data/courses/this_means_something/: Makefile.am  course.dim  items.lst
data/courses/tux_at_home/: Makefile.am  course.dim  items.lst
data/courses/twisty_slope/: Makefile.am  course.dim  items.lst
data/courses/wild_mountains/: Makefile.am  course.dim  items.lst
data/music/: Makefile.am  credits2.it  music.lst  racing_themes.lst  readme
data/players/: Makefile.am  avatars.lst
data/terrains/: Makefile.am  terrains.lst
data/textures/: Makefile.am  textures.lst
data/translations/: Makefile.am  cs_CZ.lst  de_DE.lst  du_NL.lst  en_GB.lst  eo.lst  es_ES.lst  eu_ES.lst  fi_FI.lst  fr_FR.lst  languages.lst  nb_NO.lst  pl_PL.lst  ro_RO.lst  se_SE.lst  xx_XX.lst
extreme-tuxracer/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in
extreme-tuxracer/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
extreme-tuxracer/contrib/palettes/: PPRacer---Default.gpl  PPRacer---Full.gpl
extreme-tuxracer/data/: Makefile  Makefile.am  Makefile.in  etracer_init.tcl  models.tcl  ppracer_init.tcl  samuel.tcl  speedy.tcl  trixi.tcl  tux.tcl  tux_snowboard.tcl  tux_walk.tcl
extreme-tuxracer/data/courses/: course_idx.tcl
extreme-tuxracer/data/music/: readme  themes.tcl
extreme-tuxracer/data/translations/: de_DE.tcl  en_GB.tcl  es_ES.tcl  eu_ES.tcl  fi_FI.tcl  fr_FR.tcl  hu_HU.tcl  it_IT.tcl  languages.tcl  nb_NO.tcl  nl_NL.tcl  nn_NO.tcl  pl_PL.tcl  pt_PT.tcl  ro_RO.tcl  ru_RU.tcl  sk_SK.tcl  sv_SE.tcl
extreme-tuxracer/doc/: Doxyfile
extreme-tuxracer/m4/: ChangeLog
extreme-tuxracer/po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ar.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en@boldquot.po  en@quot.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  etracer.pot  eu.po  fa.po  fi.po  fil.po  fr.po  fy.po  ga.po  gu.po  he.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  jv.po  kn.po  (+27 more)
extreme-tuxracer/src/: Makefile.am  Makefile.in  audioconfig.cpp  audioconfig.h  bench.cpp  bench.h  callbacks.cpp  callbacks.h  configmode.cpp  configmode.h  configuration.cpp  configuration.h  course_load.cpp  course_load.h  course_mgr.cpp  course_mgr.h  course_quad.cpp  course_quad.h  course_render.cpp  course_render.h  credits.cpp  credits.h  credits_trans.cpp  debug.cpp  debug.h  error_util.cpp  error_util.h  etracer.h  event_race_select.cpp  event_race_select.h  event_select.cpp  event_select.h  file_util.cpp  file_util.h  fog.cpp  fog.h  fps.cpp  fps.h  game_config.cpp  game_config.h  (+98 more)
extreme-tuxracer/src/ppgltk/: alignment.cpp  alignment.h  button.cpp  button.h  checkbox.cpp  checkbox.h  entry.cpp  entry.h  font.cpp  font.h  frame.cpp  frame.h  label.cpp  label.h  listbox.cpp  listbox.h  model.cpp  model.h  model_ac.cpp  model_ac.h  ppgltk.h  ssbutton.cpp  ssbutton.h  textarea.cpp  textarea.h  ui_mgr.cpp  ui_mgr.h  ui_snow.cpp  ui_snow.h  ui_theme.cpp  ui_theme.h  widget.cpp  widget.h
resources/: Makefile.am  app.manifest  etr.appdata.xml  etr.desktop  extremetuxracer.icns
resources/gui/: Makefile.am
(+552 files in other folders)
