SUBDIRS = build data resources

bin_PROGRAMS = etr

etr_SOURCES =		\
	audio.cpp	\
	common.cpp	\
	config_screen.cpp \
	course.cpp	\
	course_render.cpp \
	credits.cpp	\
	env.cpp		\
	event.cpp	\
	event_select.cpp \
	font.cpp	\
	ft_font.cpp	\
	game_config.cpp	\
	game_ctrl.cpp	\
	game_over.cpp	\
	game_type_select.cpp \
	gui.cpp		\
	help.cpp	\
	hud.cpp		\
	intro.cpp	\
	keyframe.cpp	\
	loading.cpp	\
	main.cpp	\
	mathlib.cpp	\
	newplayer.cpp	\
	ogl.cpp		\
	ogl_test.cpp	\
	particles.cpp	\
	paused.cpp	\
	physics.cpp	\
	quadtree.cpp	\
	race_select.cpp	\
	racing.cpp	\
	regist.cpp	\
	reset.cpp	\
	score.cpp	\
	splash_screen.cpp \
	spx.cpp		\
	states.cpp	\
	textures.cpp	\
	tool_char.cpp	\
	tool_frame.cpp	\
	tools.cpp	\
	track_marks.cpp	\
	translation.cpp	\
	tux.cpp		\
	view.cpp	\
	winsys.cpp

noinst_HEADERS =	\
	audio.h		\
	bh.h		\
	common.h	\
	config_screen.h	\
	course.h	\
	course_render.h	\
	credits.h	\
	env.h		\
	etr_types.h	\
	event.h		\
	event_select.h	\
	font.h		\
	ft_font.h	\
	game_config.h	\
	game_ctrl.h	\
	game_over.h	\
	game_type_select.h \
	gui.h		\
	help.h		\
	hud.h		\
	intro.h		\
	keyframe.h	\
	loading.h	\
	mathlib.h	\
	newplayer.h	\
	ogl.h		\
	ogl_test.h	\
	particles.h	\
	paused.h	\
	physics.h	\
	quadtree.h	\
	race_select.h	\
	racing.h	\
	regist.h	\
	reset.h		\
	score.h		\
	splash_screen.h	\
	spx.h		\
	states.h	\
	textures.h	\
	tool_char.h	\
	tool_frame.h	\
	tools.h		\
	track_marks.h	\
	translation.h	\
	tux.h		\
	version.h	\
	view.h		\
	winsys.h

EXTRA_DIST = \
	autogen.sh	\
	m4/freetype2.m4	\
	m4/sdl.m4	\
	version.rc
