
SUBDIRS = gui

appdatafiledir = $(prefix)/share/appdata
desktopfiledir = $(prefix)/share/applications
icondir = $(prefix)/share/pixmaps

appdatafile_DATA =	\
	etr.appdata.xml

desktopfile_DATA =	\
        etr.desktop

icon_DATA =		\
	etr.png		\
	etr.svg

EXTRA_DIST = 		\
	banner.bmp	\
	dialog.bmp	\
	etracericon.ico	\
	etr.appdata.xml	\
	etr.svg	        \
	etr.desktop	\
	etr.png
